Changelog
=========

1.4-dev0 - (unreleased)
---------------------------

1.3 - (2020-05-13)
---------------------------
* Change: Tests and Linters
  [valipod]

1.2 - (2020-03-03)
---------------------------
* Change: Add jenkins badges
  [valentinab25]

1.1 - (2020-02-26)
---------------------------
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

1.0 - (2020-02-14)
---------------------------
* Change: Implement automatic release [valentinab25]

* Feature: added support for Python 3 and Plone 5.2
  [iulianpetchesi, alecghica refs #110155]
  
* Apply custom style for eionet
  [krisztina]

* Add setup.py
  [krisztina]

* Initial commit
  [krisztina]