@@ -1,0 +1,35 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="eionet.theme">
+  <metal:javascriptslot fill-slot="javascript_head_slot">
+    <script type="text/javascript"
+        tal:attributes="src string:./calendar_config.js"></script>
+  </metal:javascriptslot>
+<body>
+    <div metal:fill-slot="main">
+        <tal:main-macro metal:define-macro="main">
+            <metal:body define-macro="body_macro"
+                        tal:define="templateId template/getId">
+
+                <div tal:replace="structure provider:plone.abovecontenttitle" />
+
+                <h1 class="documentFirstHeading" tal:content="context/Title">
+                    Title
+                </h1>
+
+                <div tal:replace="structure provider:plone.belowcontenttitle" />
+
+                <p class="documentDescription" tal:content="context/Description">
+                    Description
+                </p>
+
+                <div id="calendar"></div>
+
+                <div tal:replace="structure provider:plone.belowcontentbody" />
+
+            </metal:body>
+        </tal:main-macro>
+    </div>
+</body>
+</html>
