@@ -10,4 +10,9 @@
       interface="eionet.theme.interfaces.IEionetGenericThemeLayer"
       />
 
+  <layer
+      name="calendar"
+      interface="eionet.theme.interfaces.ICalendarLayer"
+      />
+
 </layers>
