@@ -3,6 +3,8 @@ Changelog
 
 1.4-dev0 - (unreleased)
 ---------------------------
+* Feature: add view for collective.js.fullcalendar
+  [valipod]
 
 1.3 - (2020-05-13)
 ---------------------------
